; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_repos_diff.c_svn_client__get_diff_editor2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_repos_diff.c_svn_client__get_diff_editor2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }
%struct.edit_baton = type { i32*, i8*, i32, i32, i32, i32*, i32, i32, i32*, i32*, i32 }
%struct.TYPE_11__ = type { %struct.edit_baton*, i32, i32, i32 }

@SVN_INVALID_REVNUM = common dso_local global i32 0, align 4
@set_target_revision = common dso_local global i32 0, align 4
@open_root = common dso_local global i32 0, align 4
@delete_entry = common dso_local global i32 0, align 4
@add_directory = common dso_local global i32 0, align 4
@open_directory = common dso_local global i32 0, align 4
@add_file = common dso_local global i32 0, align 4
@open_file = common dso_local global i32 0, align 4
@apply_textdelta = common dso_local global i32 0, align 4
@close_file = common dso_local global i32 0, align 4
@close_directory = common dso_local global i32 0, align 4
@change_file_prop = common dso_local global i32 0, align 4
@change_dir_prop = common dso_local global i32 0, align 4
@close_edit = common dso_local global i32 0, align 4
@absent_directory = common dso_local global i32 0, align 4
@absent_file = common dso_local global i32 0, align 4
@fetch_kind_func = common dso_local global i32 0, align 4
@fetch_props_func = common dso_local global i32 0, align 4
@fetch_base_func = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_client__get_diff_editor2(%struct.TYPE_12__** %0, i8** %1, i32* %2, i32 %3, i32 %4, i32 %5, i32* %6, i32 %7, i8* %8, i32* %9) #0 {
  %11 = alloca %struct.TYPE_12__**, align 8
  %12 = alloca i8**, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca %struct.TYPE_12__*, align 8
  %23 = alloca %struct.edit_baton*, align 8
  %24 = alloca %struct.TYPE_11__*, align 8
  store %struct.TYPE_12__** %0, %struct.TYPE_12__*** %11, align 8
  store i8** %1, i8*** %12, align 8
  store i32* %2, i32** %13, align 8
  store i32 %3, i32* %14, align 4
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i32* %6, i32** %17, align 8
  store i32 %7, i32* %18, align 4
  store i8* %8, i8** %19, align 8
  store i32* %9, i32** %20, align 8
  %25 = load i32*, i32** %20, align 8
  %26 = call i32* @svn_pool_create(i32* %25)
  store i32* %26, i32** %21, align 8
  %27 = load i32*, i32** %21, align 8
  %28 = call %struct.TYPE_12__* @svn_delta_default_editor(i32* %27)
  store %struct.TYPE_12__* %28, %struct.TYPE_12__** %22, align 8
  %29 = load i32*, i32** %21, align 8
  %30 = call %struct.edit_baton* @apr_pcalloc(i32* %29, i32 72)
  store %struct.edit_baton* %30, %struct.edit_baton** %23, align 8
  %31 = load i32*, i32** %21, align 8
  %32 = call %struct.TYPE_11__* @svn_delta_shim_callbacks_default(i32* %31)
  store %struct.TYPE_11__* %32, %struct.TYPE_11__** %24, align 8
  %33 = load i32*, i32** %21, align 8
  %34 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %35 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %34, i32 0, i32 0
  store i32* %33, i32** %35, align 8
  %36 = load i32, i32* %14, align 4
  %37 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %38 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %37, i32 0, i32 10
  store i32 %36, i32* %38, align 8
  %39 = load i32*, i32** %17, align 8
  %40 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %41 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %40, i32 0, i32 9
  store i32* %39, i32** %41, align 8
  %42 = load i32*, i32** %13, align 8
  %43 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %44 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %43, i32 0, i32 8
  store i32* %42, i32** %44, align 8
  %45 = load i32, i32* %15, align 4
  %46 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %47 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %46, i32 0, i32 7
  store i32 %45, i32* %47, align 4
  %48 = load i32, i32* @SVN_INVALID_REVNUM, align 4
  %49 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %50 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %49, i32 0, i32 6
  store i32 %48, i32* %50, align 8
  %51 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %52 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %51, i32 0, i32 5
  store i32* null, i32** %52, align 8
  %53 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %54 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %53, i32 0, i32 0
  %55 = load i32*, i32** %54, align 8
  %56 = call i32 @apr_hash_make(i32* %55)
  %57 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %58 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %57, i32 0, i32 4
  store i32 %56, i32* %58, align 8
  %59 = load i32, i32* %16, align 4
  %60 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %61 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %60, i32 0, i32 3
  store i32 %59, i32* %61, align 4
  %62 = load i32, i32* %18, align 4
  %63 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %64 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %63, i32 0, i32 2
  store i32 %62, i32* %64, align 8
  %65 = load i8*, i8** %19, align 8
  %66 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %67 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %66, i32 0, i32 1
  store i8* %65, i8** %67, align 8
  %68 = load i32, i32* @set_target_revision, align 4
  %69 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %70 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %69, i32 0, i32 14
  store i32 %68, i32* %70, align 4
  %71 = load i32, i32* @open_root, align 4
  %72 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %73 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %72, i32 0, i32 13
  store i32 %71, i32* %73, align 4
  %74 = load i32, i32* @delete_entry, align 4
  %75 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %76 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %75, i32 0, i32 12
  store i32 %74, i32* %76, align 4
  %77 = load i32, i32* @add_directory, align 4
  %78 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %79 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %78, i32 0, i32 11
  store i32 %77, i32* %79, align 4
  %80 = load i32, i32* @open_directory, align 4
  %81 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %82 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %81, i32 0, i32 10
  store i32 %80, i32* %82, align 4
  %83 = load i32, i32* @add_file, align 4
  %84 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %85 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %84, i32 0, i32 9
  store i32 %83, i32* %85, align 4
  %86 = load i32, i32* @open_file, align 4
  %87 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %88 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %87, i32 0, i32 8
  store i32 %86, i32* %88, align 4
  %89 = load i32, i32* @apply_textdelta, align 4
  %90 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %91 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %90, i32 0, i32 7
  store i32 %89, i32* %91, align 4
  %92 = load i32, i32* @close_file, align 4
  %93 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %94 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %93, i32 0, i32 6
  store i32 %92, i32* %94, align 4
  %95 = load i32, i32* @close_directory, align 4
  %96 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %97 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %96, i32 0, i32 5
  store i32 %95, i32* %97, align 4
  %98 = load i32, i32* @change_file_prop, align 4
  %99 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %100 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %99, i32 0, i32 4
  store i32 %98, i32* %100, align 4
  %101 = load i32, i32* @change_dir_prop, align 4
  %102 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %103 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %102, i32 0, i32 3
  store i32 %101, i32* %103, align 4
  %104 = load i32, i32* @close_edit, align 4
  %105 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %106 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %105, i32 0, i32 2
  store i32 %104, i32* %106, align 4
  %107 = load i32, i32* @absent_directory, align 4
  %108 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %109 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %108, i32 0, i32 1
  store i32 %107, i32* %109, align 4
  %110 = load i32, i32* @absent_file, align 4
  %111 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %112 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %111, i32 0, i32 0
  store i32 %110, i32* %112, align 4
  %113 = load i32, i32* %18, align 4
  %114 = load i8*, i8** %19, align 8
  %115 = load %struct.TYPE_12__*, %struct.TYPE_12__** %22, align 8
  %116 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %117 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %11, align 8
  %118 = load i8**, i8*** %12, align 8
  %119 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %120 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %119, i32 0, i32 0
  %121 = load i32*, i32** %120, align 8
  %122 = call i32 @svn_delta_get_cancellation_editor(i32 %113, i8* %114, %struct.TYPE_12__* %115, %struct.edit_baton* %116, %struct.TYPE_12__** %117, i8** %118, i32* %121)
  %123 = call i32 @SVN_ERR(i32 %122)
  %124 = load i32, i32* @fetch_kind_func, align 4
  %125 = load %struct.TYPE_11__*, %struct.TYPE_11__** %24, align 8
  %126 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %125, i32 0, i32 3
  store i32 %124, i32* %126, align 8
  %127 = load i32, i32* @fetch_props_func, align 4
  %128 = load %struct.TYPE_11__*, %struct.TYPE_11__** %24, align 8
  %129 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %128, i32 0, i32 2
  store i32 %127, i32* %129, align 4
  %130 = load i32, i32* @fetch_base_func, align 4
  %131 = load %struct.TYPE_11__*, %struct.TYPE_11__** %24, align 8
  %132 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %131, i32 0, i32 1
  store i32 %130, i32* %132, align 8
  %133 = load %struct.edit_baton*, %struct.edit_baton** %23, align 8
  %134 = load %struct.TYPE_11__*, %struct.TYPE_11__** %24, align 8
  %135 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %134, i32 0, i32 0
  store %struct.edit_baton* %133, %struct.edit_baton** %135, align 8
  %136 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %11, align 8
  %137 = load i8**, i8*** %12, align 8
  %138 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %11, align 8
  %139 = load %struct.TYPE_12__*, %struct.TYPE_12__** %138, align 8
  %140 = load i8**, i8*** %12, align 8
  %141 = load i8*, i8** %140, align 8
  %142 = load %struct.TYPE_11__*, %struct.TYPE_11__** %24, align 8
  %143 = load i32*, i32** %20, align 8
  %144 = load i32*, i32** %20, align 8
  %145 = call i32 @svn_editor__insert_shims(%struct.TYPE_12__** %136, i8** %137, %struct.TYPE_12__* %139, i8* %141, i32* null, i32* null, %struct.TYPE_11__* %142, i32* %143, i32* %144)
  %146 = call i32 @SVN_ERR(i32 %145)
  %147 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %147
}

declare dso_local i32* @svn_pool_create(i32*) #1

declare dso_local %struct.TYPE_12__* @svn_delta_default_editor(i32*) #1

declare dso_local %struct.edit_baton* @apr_pcalloc(i32*, i32) #1

declare dso_local %struct.TYPE_11__* @svn_delta_shim_callbacks_default(i32*) #1

declare dso_local i32 @apr_hash_make(i32*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_delta_get_cancellation_editor(i32, i8*, %struct.TYPE_12__*, %struct.edit_baton*, %struct.TYPE_12__**, i8**, i32*) #1

declare dso_local i32 @svn_editor__insert_shims(%struct.TYPE_12__**, i8**, %struct.TYPE_12__*, i8*, i32*, i32*, %struct.TYPE_11__*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
